<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown"
    tools:context=".MainActivity">

    <!-- Heads Counter (Top- Left) -->
    <TextView
        android:id="@+id/headsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heads_0"
        android:textSize="20sp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <!-- Tails Counter (Top-Right) -->
    <TextView
        android:id="@+id/tailsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tails_0"
        android:textSize="20sp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Coin Image (center) -->

    <!-- Toss Button (Bottom-Center) -->
    <ImageView
        android:id="@+id/coinImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="128dp"
        android:contentDescription="@string/coin"
        app:layout_constraintBottom_toTopOf="@+id/tossButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436"
        app:srcCompat="@drawable/coin_heads" />
    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="130dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@+id/tossButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coinImage" />

    <Button
        android:id="@+id/tossButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toss_coin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp" />




</androidx.constraintlayout.widget.ConstraintLayout>